--- a/mobile/src/main/res/layout/activity_display_message.xml
+++ b/mobile/src/main/res/layout/activity_display_message.xml
@@ -25,4 +25,13 @@
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Stalk"
+        android:onClick="useStalk"
+        android:id="@+id/button"
+        android:layout_centerVertical="true"
+        android:layout_alignEnd="@+id/imageButton" />
+
 </RelativeLayout>
