--- a/mobile/src/main/res/layout/activity_display_message.xml
+++ b/mobile/src/main/res/layout/activity_display_message.xml
@@ -13,7 +13,7 @@
         android:text="@string/chooseTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView" />
+        android:id="@+id/name" />
 
     <ImageButton
         android:layout_width="wrap_content"
@@ -22,7 +22,7 @@
         android:src="@drawable/smart_tvweb"
         android:onClick="useTV"
         android:layout_marginTop="100dp"
-        android:layout_below="@+id/textView"
+        android:layout_below="@+id/name"
         android:layout_centerHorizontal="true" />
 
     <Button
