--- a/mobile/src/main/res/layout/activity_my.xml
+++ b/mobile/src/main/res/layout/activity_my.xml
@@ -9,19 +9,36 @@
     tools:context=".MyActivity">
 
     <TextView
-        android:text="@string/testdriver"
+        android:text="Name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/process"
-        android:text="testing"
-        android:layout_below="@+id/textView"
+        android:id="@+id/name"
+        android:textSize="23dp"
+        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="35dp" />
+        android:layout_marginTop="18dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:ems="10"
+        android:id="@+id/username"
+        android:layout_toEndOf="@+id/name"
+        android:layout_alignTop="@+id/name"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="17dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Run"
+        android:id="@+id/run"
+        android:layout_below="@+id/username"
+        android:layout_marginTop="33dp"
+        android:layout_alignStart="@+id/username"
+        android:layout_alignEnd="@+id/username" />
 
 
 </RelativeLayout>
